gac_sb/objects/AppATmajoration__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>Annee__c</fullName>
        <label>Année</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <label>Charges</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <label>Compensation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CoutRisque__c</fullName>
        <label>Coût du risque</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MajorationArreteeDu__c</fullName>
        <label>Majoration arrêtée du</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MajorationForfaitaireRisqueTrajet__c</fullName>
        <label>Majoration forfaitaire risque trajet</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Majoration__c</fullName>
        <label>Majoration</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Penibilite__c</fullName>
        <label>Pénibilité</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Majoration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de Majoration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Majorations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AppAT_Majoration_Annee</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEFT(Annee__c,1)=&apos;2&apos;, 
NOT(REGEX( Annee__c, &apos;[2]{1}[0]{1}[0-9]{2}&apos;)), 
NOT(REGEX( Annee__c, &apos;[1]{1}[9]{1}[0-9]{2}&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Annee__c</errorDisplayField>
        <errorMessage>L&apos;année doit être au format 20XX ou 19XX</errorMessage>
    </validationRules>
</CustomObject>